# clinical-trial-pipeline

./: .flake8  .gitignore  .sqlfluff  README.md  architecture.drawio
.github/workflows/: ci-cd.yaml
api/: .dockerignore  .gitignore  Dockerfile  README.md  dummy_query.sql  generate_dummy_data.py  main.py  metadata.ducklake  pyproject.toml  sample_queries.sql
api/src/: auth.py  db.py  models.py  server.py  settings.py  storage.py
api/src/handlers/: query.py
api/src/routes/: query.py
dataloader/: .gitignore  Dockerfile  README.md  ingest.py  requirements.txt
etl/: .dockerignore  .gitignore  Dockerfile  README.md  config-old.yaml  config.py  config.yaml  incremental.sql.old  main.py  pyproject.toml  required.txt  state.db  test.json
etl/models/: incremental.py  incremental.sql
infra/: .gitignore  README.md  backend.tf  main.tf  terraform.tfvars  variables.tf
